libero right side press

--- a/libero.html
+++ b/libero.html
@@ -6,12 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KH- Indoor</title>
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="libero.css">
 </head>
 
 <body>
-  <button class="startLib">start</button>
-  <button class="stopLib">stop</button>
+  <button class="startLibLeft">start left side pressure</button>
+  <button class="startLibRight">start right side pressure</button>
+  <button class="stopLibLeft">stop</button>
+  <button class="pause">pause</button>
+  <button class="play">play</button>
 
   <div class="court">
     <div class="d d1"></div>
