--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KH Indoor systems</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-  <a href="five-dice.html">five dice</a>
-  <a href="libero.html">libero</a>
+<body class="home">
+  <img src="/img/kh-logo.svg" alt="kh-logo">
+  <h2>Welcome to KH's Indoor Systems</h2>
+  <div class="systems">
+    <a href="five-dice.html">Five Dice</a>
+    <a href="libero.html">Libero</a>
+  </div>
+  <p>Unfortunately, only works in desktop. Mobile version will come soon!</p>
 </body>
 
 </html>
