--- a/libero.html
+++ b/libero.html
@@ -6,16 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KH- Indoor</title>
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="libero.css">
 </head>
 
 <body>
-  <button class="startLibLeft">start left side pressure</button>
-  <button class="startLibRight">start right side pressure</button>
-  <button class="stopLibLeft">stop</button>
-  <button class="pause">pause</button>
-  <button class="play">play</button>
+
 
   <div class="court">
     <div class="d d1"></div>
@@ -39,10 +37,30 @@
 
   </div>
 
+  <a href="index.html" class="goback"><span class="material-symbols-outlined">
+      arrow_back
+    </span></a>
+
+  <div class="controls">
+    <div>
+      <button class="startLibLeft selected">Left side pressure</button>
+      <button class="startLibRight">Right side pressure</button>
+    </div>
+    <div>
+      <button class="play"><span class="material-symbols-outlined">
+          play_arrow
+        </span></button>
+      <button class="pause"><span class="material-symbols-outlined">
+          pause
+        </span></button>
+      <button class="stopLibLeft"><span class="material-symbols-outlined">
+          stop
+        </span></button>
+    </div>
+  </div>
 
 
-
-  <script src="libero.js"></script>
 </body>
+<script src="libero.js"></script>
 
 </html>
