no version for mobile

--- a/index.html
+++ b/index.html
@@ -22,4 +22,6 @@
   <p>Unfortunately, only works in desktop. Mobile version will come soon!</p>
 </body>
 
+<p class="d-none">Unfortunately, only works in desktop. <br>Mobile version will come soon!</p>
+
 </html>
