--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="home">
-  <img src="/img/kh-logo.svg" alt="kh-logo">
+  <img src="/img/kh-logo.png" alt="kh-logo">
   <h2>Welcome to KH's Indoor Systems</h2>
   <div class="systems">
     <a href="five-dice.html">Five Dice</a>
@@ -21,7 +21,8 @@
   </div>
   <p>Unfortunately, only works in desktop. Mobile version will come soon!</p>
 </body>
-
-<p class="d-none">Unfortunately, only works in desktop. <br>Mobile version will come soon!</p>
+<img src="/img/kh-logo.png" alt="kh-logo" class="d-none">
+<h2 class="d-none">Welcome to KH's Indoor&nbsp;Systems</h2>
+<p class="d-none">Unfortunately, only works in desktop. Mobile&nbsp;version will come soon!</p>
 
 </html>
